--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -39,5 +39,15 @@
         <url-pattern>/initParam</url-pattern>
     </servlet-mapping>
 
+    <filter>
+        <filter-name>logFilter</filter-name>
+        <filter-class>servletapp.LogFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>logFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
 </web-app>
 
